# MatrixTemplate

./: CMakeLists.txt  Matrix.h  MatrixDimensionException.h  MatrixFactory.h  main.cpp
test/: CMakeLists.txt  MatrixFixture.cpp  MatrixTest.cpp
